v3/crates/engine/tests/snapshots/execution__common__rowsets_execute__models__select_many__limit_offset__limit_offset_user_1.snap
---
source: crates/engine/tests/common.rs
expression: results
---
{
  "AuthorManyWithLimit0Offset0": {
    "Ok": [
      {
        "rows": []
      }
    ]
  },
  "AuthorManyWithLimit1Offset0": {
    "Ok": [
      {
        "rows": [
          {
            "author_id": 1,
            "first_name": "Peter"
          }
        ]
      }
    ]
  },
  "AuthorManyWithLimit1Offset1": {
    "Ok": [
      {
        "rows": []
      }
    ]
  },
  "AuthorManyWithLimit2Offset1": {
    "Ok": [
      {
        "rows": []
      }
    ]
  },
  "AuthorManyWithLimit2Offset2": {
    "Ok": [
      {
        "rows": []
      }
    ]
  }
}
