v3/crates/engine/tests/snapshots/execution__common__rowsets_execute__models__select_many__limit_offset__limit_offset_user_2.snap
---
source: crates/engine/tests/common.rs
expression: rowsets
---
{
  "Ok": [
    {
      "rows": []
    }
  ]
}
