v3/crates/engine/tests/snapshots/execution__common__rowsets_execute__models__select_many__limit_offset__offset_user_1.snap
---
source: crates/engine/tests/common.rs
expression: rowsets
---
{
  "Ok": [
    {
      "rows": [
        {
          "author_id": 1,
          "first_name": "Peter"
        }
      ]
    }
  ]
}
